syntax = "proto3";

package com.pg.xtrade.markets.cryptocurrency;
option csharp_namespace = "Markets.Rpc.Protobuf";

/*---- Global enums ----*/

//交易所
enum ExchangeType{
    Okex = 0;
    Huobi = 1;
    Bitfinex = 2;
}

//K线类型
enum CandleType{
    Day1 = 0;
    Minute1 = 1;
}

//精度类型
enum PrecisionType{
    DecimalDigits = 0;      //小数位数
    SignificantDigits = 1;  //有效数字
}

//精度等级 | 有效数字位数
enum Precision{
    P0 = 0;     
    P1 = 1;     
    P2 = 2;     
    P3 = 3;     
    P4 = 4;     
    P5 = 5;
    P6 = 6;
}

//买卖方向
enum TradeDirection{
    Unkown = 0;     //未知
    Ask = 1;        //买
    Bid = 2;        //卖
}

/*---- Basic models ----*/

//十档模型
message BookItem{
    double price = 1;            //价格
    double amount = 2;           //数量
    int32 count = 3;            //订单数
    ExchangeType exchange = 4;  //交易所
}

//单条K线
message CandleItem{
    double close = 1;    //收盘价
    double high = 2;     //最高价
    double low = 3;      //最低价
    double open = 4;     //开盘价
    double turnover = 6; //成交额
    double volume = 7;   //成交量
    int64 unixTimeStamp = 8; //K线时间戳 seconds
}

//单条TOS
message TradeItem{
    double price = 1;            //价格
    TradeDirection side = 2;    //买卖方向
    double amount = 3;          //数量
    ExchangeType exchange = 5;  //交易所
    int64 unixTimeStamp =  6;   //成交时间戳 seconds
}

//当天24小时的交易聚合信息
message Ticker{
   double amount = 1;	//以基础币种计量的交易量
   int32 count = 2;	    //交易次数
   double open = 3;	    //本阶段开盘价
   double close = 4;    //本阶段最新价
   double low = 5;	    //本阶段最低价
   double high = 6;	    //本阶段最高价
   double vol  = 7;     //以报价币种计量的交易量
   string pair = 8;     //交易对
}