syntax = "proto3";
package com.pg.xtrade.markets.cryptocurrency.subscribe;

import "Protos/Market/market_model.proto";
option csharp_namespace = "Markets.Rpc.Protobuf.Subscribe";

/*--------------------------*/
/*------ Rpc services ------*/
/*--------------------------*/

service SubMarketService{  
    //获取订阅Token
    rpc CreateToken (TokenRequest) returns (TokenResponse) {}
    //创建订阅连接
    rpc BuildConnection (SubscribeBuilder) returns (stream RealtimeData) {}
    //订阅Tos
    rpc SubscribeTrades (SubTradeRequest) returns (SubscribeResponse) {}
    //订阅Lv2
    rpc SubscribeOrderBooks (SubBookRequest) returns (SubscribeResponse) {}
    //订阅K线
    rpc SubscribeCandles (SubCandlesRequest) returns (SubscribeResponse) {}
    //订阅Ticker
    rpc SubscribeAllTickers (SubAllTickerRequest) returns (SubscribeResponse) {}
    //取消订阅
    rpc Unsubscribe (UnsubscribeRequest) returns (UnsubscribeResponse) {}
}

/*--------------------------*/
/*---- Request defines ----*/
/*--------------------------*/

//获取Token
message TokenRequest{}

//创建流连接
message SubscribeBuilder{
    string token = 1;   //订阅流标识
}

//退订请求
message UnsubscribeRequest{
    string token = 1;   //订阅流标识
    string id = 2;      //订阅请求Id
}

//订阅成交列表
message SubTradeRequest{
    string token = 1;   //订阅流标识
    string pair = 2;    //交易对
    repeated ExchangeType exchanges = 4; //订阅交易所列表
    string id = 5;      //此次订阅Id
}

//订阅挂单列表
message SubBookRequest{
    string token = 1;   //订阅流标识
    string pair = 2;    //交易对
    Precision precision = 3; //精度
    repeated ExchangeType exchanges = 4; //订阅交易所列表
    string id = 5;      //此次订阅Id
    PrecisionType precisionType = 6;     //精度类型
    //int length = 6;   //订单表档位数量
}

//订阅聚合的K线
message SubCandlesRequest{
    string token = 1;   //订阅流标识
    string pair = 2;    //交易对
    string id = 3;      //此次订阅Id
}

//订阅聚合的Ticker
message SubAllTickerRequest{
    string token = 1;   //订阅流标识
    string id = 3;      //此次订阅Id
}

/*--------------------------*/
/*---- Response defines ----*/
/*--------------------------*/

//Token响应
message TokenResponse{
    string token = 1;   //订阅流标识
}

//订阅响应
message SubscribeResponse{
    bool success = 1;   //是否操作成功
    string message = 2; //附加消息
    string id = 3;      //订阅Id
    int64 unixStamp = 4;//订阅完成Unix时间戳
}

//退订响应
message UnsubscribeResponse{
    bool success = 1;   //是否操作成功 (如果指定Id从未被订阅,也返回True)
    string message = 2; //附加消息
    int64 unixStamp = 3;//退阅完成Unix时间戳
}

//行情推送数据
message RealtimeData{
    string pair = 1;    //交易对.
    repeated ExchangeType exchange = 2; //交易所列表
    oneof data{
        RawCandle rawCandle = 3;    //分钟K线
        RawBook rawBook = 4;        //十档单条
        RawTrade rawTrade = 5;      //成交记录
        BookSanpshot bookSanpshot = 6; //快照
        TickerList tickers = 8;     //所有Ticker列表（此类型pair为默认值）
    }
}

message RawCandle{
    CandleItem item = 1;
}

message RawBook{
    BookItem item = 1;
    int32 precision = 2;
    TradeDirection direction = 3;
}

message BookSanpshot{
    repeated BookItem items = 1;
    int32 precision = 2;
    TradeDirection direction = 3;
}

message RawTrade{
    repeated TradeItem items = 1;
}

message TickerList{
   repeated Ticker items = 1;
}